Navigation & setting variables

--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -2,6 +2,8 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
+@import Settings
+
 @import Color
 @import Base
 @import Blockquote
@@ -12,6 +14,7 @@
 @import Grid
 @import Link
 @import List
+@import Navigation
 @import Spacing
 @import Table
 @import Typography
