--- a/src/_Base.sass
+++ b/src/_Base.sass
@@ -6,16 +6,19 @@
 // of sizing rems in a way that is similar to using px. 1.6rem=16px
 html
 	box-sizing: border-box
-	font-size: 62.5%
+	font-size: $global-font-size
 
 // Default body styles
 body
 	color: $color-secondary
-	font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
+	font-family: $body-font-family
 	font-size: 1.6em // currently ems cause chrome bug misinterpreting rems on body element
 	font-weight: 300
 	letter-spacing: .01em
 	line-height: 1.6
+	@if $body-antialiased
+		-webkit-font-smoothing: antialiased
+		-moz-osx-font-smoothing: grayscale
 
 // Set box-sizing globally to handle padding and border widths
 *,
