--- a/src/_Button.sass
+++ b/src/_Button.sass
@@ -9,7 +9,7 @@ input[type='reset'],
 input[type='submit']
 	background-color: $color-primary
 	border: .1rem solid $color-primary
-	border-radius: .4rem
+	border-radius: $global-radius
 	color: $color-initial
 	cursor: pointer
 	display: inline-block
