--- a/src/_Form.sass
+++ b/src/_Form.sass
@@ -14,7 +14,7 @@ select
 	appearance: none // Removes awkward default styles on some inputs for iOS
 	background-color: transparent
 	border: .1rem solid $color-quaternary
-	border-radius: .4rem
+	border-radius: $global-radius
 	box-shadow: none
 	height: 3.8rem
 	padding: .6rem 1.0rem // The .6rem vertically centers text on FF, ignored by Webkit
