--- a/css/ghast.css
+++ b/css/ghast.css
@@ -476,7 +476,7 @@ form {
   position: relative;
   display: inline-block;
   vertical-align: top;
-  width: 6.4rem;
+  width: 7rem;
   height: 2.4rem;
   padding: 0.3rem;
   background-color: transparent;
@@ -487,14 +487,18 @@ form {
   position: absolute;
   top: 0;
   left: 0;
+  margin: 0.25em 0.5em;
   opacity: 0; }
+
+.switch-input:focus ~ .switch-handle {
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.4); }
 
 .switch-group {
   display: inline-block;
   width: 100%; }
 
 .switch.no-label {
-  width: 4rem; }
+  width: 4.6rem; }
 
 .switch.no-label > .switch-input:checked ~ .switch-handle {
   left: 2rem; }
@@ -512,6 +516,7 @@ form {
   text-transform: uppercase;
   background: #d1d1d1;
   border-radius: inherit;
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15);
   transition: 150ms ease-out;
   transition-property: opacity background; }
 
@@ -541,6 +546,7 @@ form {
   height: 2.2rem;
   background: #fff;
   border-radius: 50%;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.4);
   transition: left 150ms ease-out; }
 
 .switch-handle:before {
