--- a/src/_Switches.sass
+++ b/src/_Switches.sass
@@ -7,7 +7,7 @@
     position: relative
     display: inline-block
     vertical-align: top
-    width: 6.4rem
+    width: 7rem
     height: 2.4rem
     padding: 0.3rem
     background-color: transparent
@@ -18,7 +18,11 @@
     position: absolute
     top: 0
     left: 0
+    margin: 0.25em 0.5em
     opacity: 0
+
+.switch-input:focus ~ .switch-handle
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.4)
 
 .switch-group
     display: inline-block
@@ -28,7 +32,7 @@
 //  No label
 
 .switch.no-label
-    width: 4rem
+    width: 4.6rem
 
 .switch.no-label > .switch-input:checked ~ .switch-handle
     left: 2rem
@@ -49,6 +53,7 @@
     text-transform: uppercase
     background: $color-quaternary
     border-radius: inherit
+    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15)
     transition: 150ms ease-out
     transition-property: opacity background
 
@@ -81,6 +86,7 @@
     height: 2.2rem
     background: $color-initial
     border-radius: 50%
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.4)
     transition: left 150ms ease-out
 
 .switch-handle:before
