--- a/src/components/_Blockquote.sass
+++ b/src/components/_Blockquote.sass
@@ -3,10 +3,10 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 blockquote
-	border-left: 0.3rem solid $color-quaternary
-	margin-left: 0
+	border-left: 0.5rem solid $quaternary
+	margin-left: -2.25rem
 	margin-right: 0
-	padding: 1rem 1.5rem
+	padding: 1rem 0 1rem 1.75rem
 
 	& *:last-child
 		margin: 0
