--- a/src/components/_Form.sass
+++ b/src/components/_Form.sass
@@ -13,7 +13,7 @@ textarea,
 select
 	appearance: none // Removes awkward default styles on some inputs for iOS
 	background-color: transparent
-	border: .1rem solid $color-quaternary
+	border: .1rem solid $quaternary
 	border-radius: $global-radius
 	box-shadow: none
 	height: 3.8rem
@@ -21,7 +21,7 @@ select
 	width: 100%
 
 	&:focus
-		border: .1rem solid $color-primary
+		border: .1rem solid $primary
 		outline: 0
 
 select
