--- a/src/components/_Switches.sass
+++ b/src/components/_Switches.sass
@@ -51,7 +51,7 @@
     height: inherit
     font-size: 1.1rem
     text-transform: uppercase
-    background: $color-quaternary
+    background: $quaternary
     border-radius: inherit
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.12), inset 0 0 2px rgba(0, 0, 0, 0.15)
     transition: 150ms ease-out
@@ -67,7 +67,7 @@
 .switch-trough:before
     content: attr(data-off)
     right: 1.1rem
-    color: $color-secondary
+    color: $secondary
 
 .switch-trough:after
     content: attr(data-on)
@@ -84,7 +84,7 @@
     left: 0.4rem
     width: 2.2rem
     height: 2.2rem
-    background: $color-initial
+    background: $initial
     border-radius: 50%
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.4)
     transition: left 150ms ease-out
@@ -104,7 +104,7 @@
 // Checked switch
 
 .switch-input:checked ~ .switch-trough
-    background: $color-primary
+    background: $primary
 
 .switch-input:checked ~ .switch-trough:before
     opacity: 0
