--- a/src/base/_Base.sass
+++ b/src/base/_Base.sass
@@ -10,7 +10,7 @@ html
 
 // Default body styles
 body
-	color: $color-secondary
+	color: $body-font-color
 	font-family: $body-font-family
 	font-size: 1.6em // currently ems cause chrome bug misinterpreting rems on body element
 	font-weight: 300
