--- a/src/components/_Code.sass
+++ b/src/components/_Code.sass
@@ -3,7 +3,7 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 code
-	background: $color-tertiary
+	background: $tertiary
 	border-radius: $global-radius
 	font-size: 86%
 	padding: .2rem .5rem
@@ -11,9 +11,10 @@ code
 	white-space: nowrap
 
 pre
-	background: $color-tertiary
-	border-left: .3rem solid $color-primary
-	font-family: $font-family-monospace
+	background: $tertiary
+	border-left: .3rem solid $primary
+	border-radius: $global-radius
+	font-family: $monospace-font-family
 
 	& > code
 		background: transparent
