--- a/src/components/_Link.sass
+++ b/src/components/_Link.sass
@@ -3,8 +3,9 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 a
-	color: $color-primary
+	color: $primary
 	text-decoration: none
 
 	&:hover
-		color: $color-secondary
+		color: $secondary
+		border-color: $secondary
