--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -2,21 +2,27 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-@import Settings
+@import 'utilities/functions'
 
-@import Color
-@import Base
-@import Blockquote
-@import Button
-@import Code
-@import Divider
-@import Form
-@import Grid
-@import Link
-@import List
-@import Navigation
-@import Spacing
-@import Switches
-@import Table
-@import Typography
-@import Utility
+@import 'base/color'
+@import 'base/settings'
+@import 'base/mixins'
+
+@import 'base/base'
+@import 'base/grid'
+@import 'base/spacing'
+@import 'base/typography'
+@import 'components/blockquote'
+@import 'components/button'
+@import 'components/code'
+@import 'components/footer'
+@import 'components/form'
+@import 'components/header'
+@import 'components/hero'
+@import 'components/link'
+@import 'components/list'
+@import 'components/switches'
+@import 'components/table'
+@import 'components/titles'
+@import 'utilities/utility'
+@import 'utilities/divider'
