--- a/src/utilities/_Divider.sass
+++ b/src/utilities/_Divider.sass
@@ -4,6 +4,6 @@
 
 hr
 	border: 0
-	border-top: .1rem solid $color-tertiary
+	border-top: .1rem solid $tertiary
 	margin-bottom: 3.5rem
 	margin-top: 3rem
