--- a/src/utilities/_Utility.sass
+++ b/src/utilities/_Utility.sass
@@ -2,6 +2,17 @@
 // Utility
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
+// Align text
+.is-centered
+  text-align: center
+
+.is-left
+  text-align: left
+
+.is-right
+  text-align: right
+
+
 // Float either direction
 .float-right
 	float: right
