--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -23,6 +23,7 @@
 @import 'components/list'
 @import 'components/switches'
 @import 'components/table'
+@import 'components/tabs'
 @import 'components/titles'
 @import 'utilities/utility'
 @import 'utilities/divider'
