--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -14,6 +14,7 @@
 @import 'base/typography'
 @import 'components/blockquote'
 @import 'components/button'
+@import 'components/card'
 @import 'components/code'
 @import 'components/footer'
 @import 'components/form'
@@ -21,6 +22,7 @@
 @import 'components/hero'
 @import 'components/link'
 @import 'components/list'
+@import 'components/media'
 @import 'components/switches'
 @import 'components/table'
 @import 'components/tabs'
