--- a/src/ghast.sass
+++ b/src/ghast.sass
@@ -2,14 +2,21 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
+// Reset all the properties for a clean slate.
+@import 'base/reset'
+
+// Important functions to be used in other files.
 @import 'utilities/functions'
 
+// Import core components.
 @import 'base/color'
 @import 'base/settings'
 @import 'base/mixins'
 
+// Import all components.
 @import 'base/base'
 @import 'base/grid'
+@import 'base/images'
 @import 'base/spacing'
 @import 'base/typography'
 @import 'components/blockquote'
