--- a/src/components/_Card.sass
+++ b/src/components/_Card.sass
@@ -29,11 +29,10 @@
 
 .card
   background: white
-  box-shadow: 0 0.2rem -.3rem rgba(black, 0.1), 0 0 0 0.1rem rgba(black, 0.1)
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.1), 0 0 0 0.1rem rgba(0, 0, 0, 0.1)
   max-width: 100%
   position: relative
-  width: 30rem
+  width: 100%
+  border-radius: $global-radius
   .media:not(:last-child)
     margin-bottom: 1rem
-  &.is-rounded
-    border-radius: 0.5rem
