--- a/src/components/_Titles.sass
+++ b/src/components/_Titles.sass
@@ -2,14 +2,14 @@
 // Titles
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-.is-title,
+.title,
 .subtitle
   &:not(:last-child)
     margin-bottom: 2rem
 
-.is-title
+.title
   color: $secondary
-  font-size: 1.6rem
+  font-size: 3.6rem
   line-height: 1
   strong
     color: inherit
@@ -24,9 +24,12 @@
     font-weight: 400
     strong
       font-weight: 700
-    @include media(tablet)
-      & + .subtitle
-        margin-top: -1.5rem
+  @each $size in $sizes
+    $i: index($sizes, $size)
+    &.is-#{$i}
+      font-size: $size
+      code
+        font-size: nth($sizes, min($i + 1, 6))
 
 .subtitle
   font-size: 1.8rem
@@ -46,3 +49,9 @@
     font-weight: 400
     strong
       font-weight: 700
+  @each $size in $sizes
+    $i: index($sizes, $size)
+    &.is-#{$i}
+      font-size: $size
+      code
+        font-size: nth($sizes, min($i + 1, 6))
