--- a/src/utilities/_Utility.sass
+++ b/src/utilities/_Utility.sass
@@ -2,32 +2,71 @@
 // Utility
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-// Align text
-.is-centered
+// Display
+
+.is-block
+  display: block
+
+.is-inline
+  display: inline
+
+.is-flex
+  display: flex
+
+// Float
+
+.is-clearfix
+  +clearfix
+
+.is-pulled-left
+  float: left
+
+.is-pulled-right
+  float: right
+
+// Overlay
+
+.is-overlay
+  +overlay
+
+// Size
+
+.is-fullwidth
+  width: 100%
+
+// Text
+
+.is-text-centered
   text-align: center
 
-.is-left
+.is-text-left
   text-align: left
 
-.is-right
+.is-text-right
   text-align: right
 
+// Visibility
 
-// Float either direction
-.float-right
-	float: right
+.is-hidden-mobile
+  +media(mobile)
+    display: none !important
 
-.float-left
-	float: left
+.is-hidden-tablet
+  +media(tablet)
+    display: none !important
 
-// Clear a float with .clearfix
-.clearfix
-	*zoom: 1
+.is-hidden-touch
+  +media(touch)
+    display: none !important
 
-	&:after,
-	&:before
-		content: ''
-		display: table
+.is-hidden-desktop
+  +media(desktop)
+    display: none !important
 
-	&:after
-		clear: both
+// Other
+
+.is-disabled
+  pointer-events: none
+
+.is-marginless
+  margin: 0 !important
