--- a/src/base/_Color.sass
+++ b/src/base/_Color.sass
@@ -8,13 +8,12 @@ $secondary: #8f979e
 $tertiary: #f4f5f6
 $quaternary: #d1d1d1
 
-$gray-darker: #222324
-$gray-dark: #69707a
-$gray: #aeb1b5
-$gray-light: #d3d6db
-$gray-lighter: #ebeff5
-$gray-lighter: #f5f7fa
-$midnight-gray: #606c76;
+$gray-darker: #111
+$gray-dark: #333
+$gray: #444
+$gray-light: #666
+$gray-lighter: #999
+$midnight-gray: #606c76
 
 $black: #0a0a0a
 $white: #fff
