--- a/src/base/_Reset.sass
+++ b/src/base/_Reset.sass
@@ -123,7 +123,7 @@ input[type="checkbox"]
   vertical-align: bottom
 
 select, input, textarea
-  font: 99% sans-serif
+  font: 99%
 
 table
   font-size: inherit
