--- a/src/components/_Card.sass
+++ b/src/components/_Card.sass
@@ -33,6 +33,7 @@
   max-width: 100%
   position: relative
   width: 100%
+  margin-bottom: 2rem
   border-radius: $global-radius
   .media:not(:last-child)
     margin-bottom: 1rem
