--- a/src/base/_Settings.sass
+++ b/src/base/_Settings.sass
@@ -5,21 +5,22 @@
 // Imports
 // ---------
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,700);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700);
 
 // 1. Global
 // ---------
 
 $global-font-size: 62.5%
-$global-width: 120rem
-$global-lineheight: 1.5
+$global-width: 64.5rem
+$global-lineheight: 1.6
 $global-radius: 0.3rem
 
-$body-font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif
+$body-background-color: $offwhite
+$body-font-family: 'Noto Serif', serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $body-antialiased: true
 $colors: (dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), info: ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert))
-$body-font-color: $midnight-gray;
+$body-font-color: $gray;
 
 
 // 2. Header
