--- a/src/components/_Hero.sass
+++ b/src/components/_Hero.sass
@@ -127,7 +127,7 @@
   &.is-large
     +media(tablet)
       .tabs
-        font-size: $size-medium
+        font-size: 1.6rem
   &.is-medium
     +media(tablet)
       .hero-content
