--- a/src/components/_Media.sass
+++ b/src/components/_Media.sass
@@ -2,7 +2,7 @@
   background: $white
   border-radius: $global-radius
   display: inline-block
-  font-size: $size-medium
+  font-size: 1.6rem
   height: 3.2rem
   line-height: 2.4rem
   min-width: 3.2rem
