--- a/src/base/_Settings.sass
+++ b/src/base/_Settings.sass
@@ -5,7 +5,7 @@
 // Imports
 // ---------
 
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,400italic,700);
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700)
 
 // 1. Global
 // ---------
@@ -16,11 +16,11 @@ $global-lineheight: 1.6
 $global-radius: 0.3rem
 
 $body-background-color: $offwhite
-$body-font-family: 'Noto Serif', serif
+$body-font-family: 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif
 $monospace-font-family: 'Menlo', 'Consolas', 'Bitstream Vera Sans Mono', 'DejaVu Sans Mono', 'Monaco', monospace
 $body-antialiased: true
 $colors: (dark: ($dark, $dark-invert), primary: ($primary, $primary-invert), info: ($info, $info-invert), success: ($success, $success-invert), warning: ($warning, $warning-invert), danger: ($danger, $danger-invert))
-$body-font-color: $gray;
+$body-font-color: $gray
 
 
 // 2. Header
