--- a/src/components/_Titles.sass
+++ b/src/components/_Titles.sass
@@ -25,17 +25,18 @@
       font-weight: 700
   @each $size in $sizes
     $i: index($sizes, $size)
-    &.is-#{$i}
+    &.#{$i}
       font-size: $size
       code
         font-size: nth($sizes, min($i + 1, 6))
 
 .subtitle
   font-size: 1.8rem
+  font-weight: 400
   line-height: 1.125
   strong
     color: $secondary
-    font-weight: 400
+    font-weight: 700
   code
     border-radius: $global-radius
     display: inline-block
