--- a/src/base/_Settings.sass
+++ b/src/base/_Settings.sass
@@ -5,7 +5,7 @@
 // Imports
 // ---------
 
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,400italic,700)
+@import url(https://fonts.googleapis.com/css?family=Noto+Sans:700,400)
 
 // 1. Global
 // ---------
